--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
                 <th>Enmity +/-</th>
                 <th>CE</th>
                 <th>VE</th>
+                <th>Actions</th>
             </tr>
         </table>
         <script src="" async defer></script>
