Add enmity options

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         </style>
         <h1>FFXI Enmity Simulator</h1>
         <input id="newPlayerName">
-        <button onclick='createPlayerRow();'>Add Player</button>
+        <button onclick='createPlayerRow();' style="margin-bottom: 10px;">Add Player</button>
 
         <table cellpadding='3' id="basePlayerTable">
             <tr>
