--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
             <tr>
                 <th>Player Name</th>
                 <th>Enmity +/-</th>
-                <th>CE</th>
-                <th>VE</th>
+                <th>Cumulative Enmity</th>
+                <th>Volatile Enmity</th>
                 <th>Actions</th>
             </tr>
         </table>
