--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
         <input id="newPlayerName">
         <button onclick='createPlayerRow();' style="margin-bottom: 10px;">Add Player</button>
         <button onclick='triggerCombat();'style="margin-bottom: 10px;">Aggro Enemy</button>
+        <button onclick='stopCombat();'style="margin-bottom: 10px;">Reset Combat</button>
         <table cellpadding='3' id="basePlayerTable">
             <tr>
                 <th>Player Name</th>
